--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(installer LANGUAGES CXX)
+project(installer_dev LANGUAGES CXX)
 
-set(BINARY_NAME "installer")
+set(BINARY_NAME "installer_dev")
 
 cmake_policy(SET CMP0063 NEW)
 
@@ -93,6 +93,3 @@ install(DIRECTORY "${PROJECT_BUILD_DIR}/${FLUTTER_ASSET_DIR_NAME}"
 install(FILES "${AOT_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_DATA_DIR}"
   CONFIGURATIONS Profile;Release
   COMPONENT Runtime)
-
-# Copy the scripts to output directory
-install(DIRECTORY "scripts" DESTINATION "${CMAKE_INSTALL_PREFIX}" COMPONENT Runtime)
